# pair-trading

./: Pair_Trading.py  Pair_Trading_v2.py  README.md  pyproject.toml
src/pair_trading/: __init__.py
