[project]
name = "pair-trading"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NorthSeaPark", email = "hou.308@osu.edu" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
